Switchin to nbdev 2 and cleaning the notebooks and code.

--- a/00_init.ipynb
+++ b/00_init.ipynb
@@ -1,21 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "description: Provides functionality to construct special synteny graph from pangenome\n",
+    "  annotation (and actual sequences).\n",
+    "output-file: init.html\n",
+    "title: Synteny module\n",
+    "\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp __init__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Synteny module\n",
-    "\n",
-    "> Provides functionality to construct special synteny graph from pangenome annotation (and actual sequences)."
+    "#| default_exp __init__"
    ]
   },
   {
@@ -39,7 +44,7 @@
     }
    ],
    "source": [
-    "#hide\n",
+    "#| include: false\n",
     "from nbdev.showdoc import *\n",
     "from nbdev.export import notebook2script\n",
     "notebook2script()"
