--- a/03_synteny.ipynb
+++ b/03_synteny.ipynb
@@ -1,12 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# default_exp synteny"
+    "---\n",
+    "description: Provides functionality to construct special synteny graph from pangenome\n",
+    "  annotation (and actual sequences).\n",
+    "output-file: synteny.html\n",
+    "title: Synteny module\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -15,46 +20,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hide\n",
+    "#| default_exp synteny"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| include: false\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Synteny module\n",
-    "\n",
-    "> Provides functionality to construct special synteny graph from pangenome annotation (and actual sequences)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted 00_init.ipynb.\n",
-      "Converted 01_graph.ipynb.\n",
-      "Converted 02_tree.ipynb.\n",
-      "Converted 03_synteny.ipynb.\n",
-      "Converted 04_utils.ipynb.\n",
-      "Converted 05_export.ipynb.\n",
-      "Converted deBruijnGraphProcessing.ipynb.\n",
-      "Converted graphTesting.ipynb.\n",
-      "Converted index.ipynb.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#hide\n",
-    "from nbdev.showdoc import *\n",
-    "from nbdev.export import notebook2script\n",
-    "notebook2script()"
+    "#| include: false\n",
+    "from nbdev import nbdev_export\n",
+    "nbdev_export()"
    ]
   },
   {
@@ -63,11 +51,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#exporti\n",
+    "#| exporti\n",
     "import os\n",
     "import glob\n",
     "import json\n",
     "import itertools\n",
+    "\n",
+    "import pdb\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -110,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def readTransMap(transMapFile,ATaccessionName='araport'):\n",
     "    # reading and preparing transmap in pandas format\n",
     "    transMap = pd.read_csv(transMapFile,delimiter='\\t')\n",
@@ -132,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def generateOrder(files, priorityAccession='TIAR10'):\n",
     "    idxList = list(range(len(files)))\n",
     "    if priorityAccession is not None:\n",
@@ -148,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def getIDs(iterator):\n",
     "    idList = []\n",
     "    for interval in iterator:\n",
@@ -237,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def recordSegment(name,segmentIDs,segmentIDToNumDict,sequence=None,gfaFile=None,segmentData=None):\n",
     "    segmentIDs.append(name)\n",
     "    \n",
@@ -437,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def writeLinks(gfaFile,links,doCigars=True):\n",
     "    for linkLeft,linksRight in links.items():\n",
     "        for linkRight in linksRight:\n",
@@ -469,6 +459,13 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
