--- a/04_utils.ipynb
+++ b/04_utils.ipynb
@@ -1,12 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# default_exp utils"
+    "---\n",
+    "description: Provides utility functions and classes\n",
+    "output-file: utils.html\n",
+    "title: Utils module\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -15,48 +19,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hide\n",
+    "#| default_exp utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| include: false\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Utils module\n",
-    "\n",
-    "> Provides utility functions and classes"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converted 00_init.ipynb.\n",
-      "Converted 01_graph.ipynb.\n",
-      "Converted 02_tree.ipynb.\n",
-      "Converted 03_synteny.ipynb.\n",
-      "Converted 04_utils.ipynb.\n",
-      "Converted 05_export.ipynb.\n",
-      "Converted 05_exportDev.ipynb.\n",
-      "Converted deBruijnGraphProcessing.ipynb.\n",
-      "Converted dev.ipynb.\n",
-      "Converted graphTesting.ipynb.\n",
-      "Converted index.ipynb.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#hide\n",
+    "#| include: false\n",
     "# from nbdev.showdoc import *\n",
-    "from nbdev.export import notebook2script\n",
-    "notebook2script()"
+    "from nbdev import nbdev_export\n",
+    "nbdev_export()"
    ]
   },
   {
@@ -65,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "from collections.abc import Iterable\n",
     "# from copy import deepcopy\n",
     "import json\n",
@@ -90,8 +76,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
-    "def pathFileToPathDict(filePath,directional=True,sort=True):\n",
+    "#| export\n",
+    "def sortAccessions(sort,_paths):\n",
+    "    paths = {}\n",
+    "    if isinstance(sort,bool):\n",
+    "        for accession in sorted(list(_paths.keys())):\n",
+    "            paths[accession] = _paths[accession]\n",
+    "    elif isinstance(sort,str):\n",
+    "        pathNamesList = list(_paths.keys())\n",
+    "        try:\n",
+    "            paths[sort] = _paths[sort]\n",
+    "            pathNamesList.remove(sort)\n",
+    "        except KeyError:\n",
+    "            Warning(f'Path name {sort} was not found in path file. All paths are sorted in lexicographic order')\n",
+    "        for accession in sorted(pathNamesList):\n",
+    "            paths[accession] = _paths[accession]\n",
+    "    elif isinstance(sort,Iterable):\n",
+    "        pathNamesList = list(_paths.keys())\n",
+    "        for pathInd in sort:\n",
+    "            accession = pathNamesList[pathInd]\n",
+    "            paths[accession] = _path[accession]\n",
+    "    return paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def pathFileToPathDict(filePath,directional=True,sort=True,v2=True):\n",
     "    '''\n",
     "    Reads path file (ASCII file) and translates it to path dictionary for `GenGraph` class constructor.\n",
     "    \n",
@@ -123,37 +138,48 @@
     "    _paths = {}\n",
     "    with open(filePath) as f:\n",
     "        for line in f:\n",
-    "            pathName,pathNodeList = line.strip(' \\n\\t').split(':')\n",
-    "            if directional:\n",
-    "                _paths[pathName] = pathNodeList.strip().split(',')\n",
+    "            pathNameChr,pathNodeList = line.strip(' \\n\\t').split(':')\n",
+    "            if v2:\n",
+    "                pathName,seqID = [name.strip() for name in pathNameChr.split('-')]\n",
     "            else:\n",
-    "                _paths[pathName] = [f'{node}+' for node in pathNodeList.strip().split(',')]\n",
-    "    \n",
+    "                pathName = pathNameChr.strip()\n",
+    "                seqID = None\n",
+    "            if directional:\n",
+    "                chainList = [nodedir.strip() for nodedir in pathNodeList.strip().split(',')]\n",
+    "            else:\n",
+    "                chainList = [f'{node.strip()}+' for node in pathNodeList.strip().split(',')]\n",
+    "            \n",
+    "            if v2:\n",
+    "                _paths.setdefault(seqID,{})[pathName] = chainList\n",
+    "            else:\n",
+    "                _paths[pathName] = chainList\n",
+    "            \n",
     "    if isinstance(sort,bool):\n",
     "        if sort:\n",
-    "            paths = {}\n",
-    "            for accession in sorted(list(_paths.keys())):\n",
-    "                paths[accession] = _paths[accession]\n",
+    "            if v2:\n",
+    "                paths = {}\n",
+    "                for seqID in _paths.keys():\n",
+    "                    paths[seqID] = sortAccessions(sort,_paths[seqID])\n",
+    "            else:\n",
+    "                paths = sortAccessions(sort,_paths)\n",
     "            del _paths\n",
     "        else:\n",
     "            paths = _paths\n",
     "    elif isinstance(sort,str):\n",
-    "        paths = {}\n",
-    "        pathNamesList = list(_paths.keys())\n",
-    "        try:\n",
-    "            paths[sort] = _paths[sort]\n",
-    "            pathNamesList.remove(sort)\n",
-    "        except KeyError:\n",
-    "            Warning(f'Path name {sort} was not found in path file. All paths are sorted in lexicographic order')\n",
-    "        for accession in sorted(pathNamesList):\n",
-    "            paths[accession] = _paths[accession]\n",
+    "        if v2:\n",
+    "            paths = {}\n",
+    "            for seqID in _paths.keys():\n",
+    "                paths[seqID] = sortAccessions(sort,_paths[seqID])\n",
+    "        else:\n",
+    "            paths = sortAccessions(sort,_paths)\n",
     "        del _paths\n",
     "    elif isinstance(sort,Iterable):\n",
-    "        paths = {}\n",
-    "        pathNamesList = list(_paths.keys())\n",
-    "        for pathInd in sort:\n",
-    "            accession = pathNamesList[pathInd]\n",
-    "            paths[accession] = _path[accession]\n",
+    "        if v2:\n",
+    "            paths = {}\n",
+    "            for seqID in _paths.keys():\n",
+    "                paths[seqID] = sortAccessions(sort,_paths[seqID])\n",
+    "        else:\n",
+    "            paths = sortAccessions(sort,_paths)\n",
     "        del _paths\n",
     "    else:\n",
     "        paths = _paths\n",
@@ -200,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def pathConvert(inputPath, suffix=''):\n",
     "    outputPath = os.path.dirname(inputPath)\n",
     "    outputName = '.'.join(os.path.splitext(os.path.basename(inputPath))[:-1])+suffix\n",
@@ -213,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def checkZoomLevels(zoomLevels):\n",
     "    '''\n",
     "    Check that each previous zoom level is factor of next one\n",
@@ -229,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def adjustZoomLevels(zoomLevels):\n",
     "    '''\n",
     "    If there is no zoom level 1, adds it to the list.\n",
@@ -262,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "# https://stackoverflow.com/questions/50916422/python-typeerror-object-of-type-int64-is-not-json-serializable\n",
     "# Class for encoding np types to JSON\n",
     "class NpEncoder(json.JSONEncoder):\n",
@@ -276,7 +302,7 @@
     "        elif isinstance(obj, set):\n",
     "            return list(obj)\n",
     "        else:\n",
-    "            return super(NpEncoder, self).default(obj)\n"
+    "            return super(NpEncoder, self).default(obj)"
    ]
   },
   {
@@ -292,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "class bidict(dict):\n",
     "    '''\n",
     "    Here is a class for a bidirectional dict, inspired by Finding key from\n",
@@ -403,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#Not used any more. Redis Schema changed.\n",
     "def getDBID(pathToDictFile,caseName):\n",
     "    dbid = None\n",
     "    if os.path.exists(pathToDictFile):\n",
@@ -446,9 +472,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
-    "def resetDB(pathToDictFile,redisServer='redis',port=6379):\n",
-    "    os.remove(pathToDictFile)\n",
+    "#| export\n",
+    "def resetDB(redisServer='redis',port=6379):\n",
+    "    # os.remove(pathToDictFile)\n",
     "    conn = Redis(host=redisServer,port=port,db=0)\n",
     "    conn.flushall()\n",
     "    return 0"
@@ -467,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def iset_add(r,name,intervalMapping):\n",
     "    '''\n",
     "        Add members with intervals to interval set. If interval set does not exist, it will be created. \n",
@@ -499,7 +525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def iset_get(r,name,member=None):\n",
     "    '''\n",
     "        Return either the whole interval set or specific name(s) with its interval.\n",
@@ -536,7 +562,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def iset_score(r,name,start,end=None):\n",
     "    '''\n",
     "        Returns all member names whose interval contains a given value or intersects with the given interval\n",
@@ -559,8 +585,8 @@
     "    tid = random.randint(1e8,1e9-1)\n",
     "#     r.execute_command('ZRANGESTORE',*['startSetTemp','geneStart','-inf',_endPos,'BYSCORE'])\n",
     "#     r.execute_command('ZRANGESTORE',*['endSetTemp','geneEnd',start,'inf','BYSCORE'])\n",
-    "    r.zrangestore(f'startSetTemp_{tid}',f'{name}Start','-inf',_endPos,byScore=True)\n",
-    "    r.zrangestore(f'endSetTemp_{tid}',f'{name}End',start,'inf',byScore=True)\n",
+    "    r.zrangestore(f'startSetTemp_{tid}',f'{name}Start','-inf',_endPos,byscore=True)\n",
+    "    r.zrangestore(f'endSetTemp_{tid}',f'{name}End',start,'inf',byscore=True)\n",
     "    res = ['_'.join(el.decode().split('_')[:-1]) for el in r.zinter([f'startSetTemp_{tid}',f'endSetTemp_{tid}'])]\n",
     "    r.delete(f'startSetTemp_{tid}',f'endSetTemp_{tid}')\n",
     "    return res"
@@ -572,7 +598,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def iset_not_score(r,name,start,end=None):\n",
     "    '''\n",
     "        Returns all intervals (member names only) where query value is not contained or query interval is not intersecting.\n",
@@ -596,10 +622,10 @@
     "        raise ValueError('``start`` should be less or equal to ``end``.')\n",
     "    tid = random.randint(1e8,1e9-1)\n",
     "\n",
-    "    r.zrangestore(f'startSetTemp_{tid}',f'{name}Start','-inf',_endPos,byScore=True)\n",
-    "    r.zrangestore(f'endSetTemp_{tid}',f'{name}End',start,'inf',byScore=True)\n",
+    "    r.zrangestore(f'startSetTemp_{tid}',f'{name}Start','-inf',_endPos,byscore=True)\n",
+    "    r.zrangestore(f'endSetTemp_{tid}',f'{name}End',start,'inf',byscore=True)\n",
     "    r.zinterstore(f'foundSetTemp_{tid}',[f'startSetTemp_{tid}',f'endSetTemp_{tid}'])\n",
-    "    r.zrangestore(f'allSetTemp_{tid}',f'{name}Start','-inf','inf',byScore=True)\n",
+    "    r.zrangestore(f'allSetTemp_{tid}',f'{name}Start','-inf','inf',byscore=True)\n",
     "    res = [el.decode() for el in (r.zdiff([f'allSetTemp_{tid}',f'foundSetTemp_{tid}']))]\n",
     "    r.delete(f'startSetTemp_{tid}',f'endSetTemp_{tid}',f'allSetTemp_{tid}',f'foundSetTemp_{tid}')\n",
     "    \n",
@@ -612,7 +638,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def iset_del(r,name,member=None):\n",
     "    '''\n",
     "        Return either the whole interval set or specific name(s) with its interval.\n",
@@ -694,7 +720,7 @@
     "    numSegmentDigits = int(np.ceil(np.log10(numSegments)))\n",
     "\n",
     "    for nodeID,node in enumerate(segmentList):\n",
-    "        print(f'\\nLoading segment {nodeID+1:0{numSegmentDigits}}/{numSegments:0{numSegmentDigits}}',end='')\n",
+    "        print(f'\\rLoading segment {nodeID+1:0{numSegmentDigits}}/{numSegments:0{numSegmentDigits}}',end='')\n",
     "        segmentArray = node.rstrip().split(sep='\\t')\n",
     "        segID,segGFAData = segmentArray[1:3]\n",
     "        segSeq = segGFAData\n",
@@ -714,7 +740,7 @@
     "    forwardLinks = {}\n",
     "\n",
     "    for linkID,link in enumerate(linkList):\n",
-    "        print(f'\\nLoading link {linkID+1:0{numLinkDigits}}/{numLinks:0{numLinkDigits}}',end='')\n",
+    "        print(f'\\rLoading link {linkID+1:0{numLinkDigits}}/{numLinks:0{numLinkDigits}}',end='')\n",
     "        linkArray = link.rstrip().split(sep='\\t')\n",
     "        fromNodeID,fromStrand,toNodeID,toStrand = linkArray[1:5]\n",
     "        fromNode = nodeNameToID[fromNodeID]\n",
@@ -734,7 +760,7 @@
     "    addedPaths = 0\n",
     "    ignoredPaths = 0\n",
     "    for pathID,pathString in enumerate(pathStringsList):\n",
-    "        print(f'\\nLoading path {pathID+1:0{numPathDigits}}/{numPaths:0{numPathDigits}}',end='')\n",
+    "        print(f'\\rLoading path {pathID+1:0{numPathDigits}}/{numPaths:0{numPathDigits}}',end='')\n",
     "        pathArray = pathString.rstrip().split(sep='\\t')\n",
     "        seqID,path = pathArray[1:3]\n",
     "        useAccession = True\n",
@@ -909,6 +935,13 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
