--- a/05_export.ipynb
+++ b/05_export.ipynb
@@ -1,13 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "b7741886",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "description: Provides functionality to export graph to Pantograph data storage.\n",
+    "output-file: export.html\n",
+    "title: Export module\n",
+    "\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "surrounded-attention",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp export"
+    "#| default_exp export"
    ]
   },
   {
@@ -17,19 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hide\n",
+    "#| include: false\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "enabling-fifth",
-   "metadata": {},
-   "source": [
-    "# Export module\n",
-    "\n",
-    "> Provides functionality to export graph to Pantograph data storage."
    ]
   },
   {
@@ -56,7 +60,7 @@
     }
    ],
    "source": [
-    "#hide\n",
+    "#| include: false\n",
     "from nbdev.showdoc import *\n",
     "from nbdev.export import notebook2script\n",
     "notebook2script()"
@@ -69,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#exporti\n",
+    "#| exporti\n",
     "\n",
     "import os\n",
     "import glob\n",
@@ -113,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "componentTemplate = {\n",
     "    \"first_bin\": 1,\n",
     "    \"last_bin\": 1,\n",
@@ -143,7 +147,7 @@
     "    \"pangenome_length\": 0,#pangenomeLength, #total number of bp in pangenome\n",
     "    \"includes_connectors\": True,\n",
     "    \"zoom_levels\": {}\n",
-    "}\n"
+    "}"
    ]
   },
   {
@@ -175,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def outLeftRight(nodeInversionInPath,leftFarLink,rightFarLink,reason,debug=False,inversionThreshold=0.5):\n",
     "    \n",
     "    if (nodeInversionInPath<=inversionThreshold):\n",
@@ -197,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def recordLinks(nodeIdx,nextNode,pathID,step,nodeInversionInPath,nonLinearCond,pathNodeArray,fromLinks,toLinks,debug=False,inversionThreshold=0.5):\n",
     "    leftFarLink = False\n",
     "    rightFarLink = False\n",
@@ -257,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def checkForBreak(nodeIdx,nodeLen,\n",
     "                  nodePathsIdx,nodeSeqInPath,\n",
     "                  uniqueNodePathsIDs,pathNodeCount,\n",
@@ -557,7 +561,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def createZoomLevelDir(outputPath,outputName,zoomLevel):\n",
     "    '''\n",
     "    Creates a directory for zoom level chunks. The function will take care of correct directory level separator.\n",
@@ -585,7 +589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def recordZoomLevelForDebug(zoomNodeToComponent,\n",
     "                            zoomComponentToNodes,\n",
     "                            zoomComponentLengths,\n",
@@ -646,7 +650,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def nodeStat(nodeIdx,pathNodeArray,nodeLengths):\n",
     "    '''\n",
     "    Function calculate information about node as part of the overall graph.\n",
@@ -699,7 +703,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def finaliseComponentBase(component,\n",
     "                      components,componentNucleotides,\n",
     "                      matrix,occupants,nBins,componentLengths,nucleotides,zoomLevel,accessions,inversionThreshold=0.5):\n",
@@ -733,7 +737,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def processAnnotationInterval(posStart,posEnd,annotation,res):\n",
     "    for pos in range(posStart,posEnd):\n",
     "        r = []\n",
@@ -751,7 +755,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def updateEdges(accEdge,edgeAccessions,compNum):\n",
     "    '''\n",
     "    Function fills up either accStarts or accEnds (on which component each accession starts and \n",
@@ -771,7 +775,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def baseLayerZoom(graph,\n",
     "                  outputPath,outputName,\n",
     "                  pathNodeArray,pathDirArray,\n",
@@ -1154,7 +1158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def splitforwardInversedNodeComp(pathList,component,isInverse):\n",
     "    forward = []\n",
     "    inversed = []\n",
@@ -1182,7 +1186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def nodeToComponentLinks(components,componentToNode,nodeToComponent,fromLinks,toLinks,fromComponentLinks,toComponentLinks,debug=False):\n",
     "    numComps = len(components)\n",
     "    numCompsDigits = np.int(np.ceil(np.log10(numComps)))\n",
@@ -1236,7 +1240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def fillLinksBase(nodeInComp,nodeToComponent,fromLinks,toLinks,fromComponentLinks,toComponentLinks,compNum,components,doLeft=True,doRight=True):\n",
     "    component = components[compNum]\n",
     "    for node,isFirstNode in zip([nodeInComp[0],nodeInComp[-1]],[True,False]):\n",
@@ -1323,7 +1327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def addLink(fromComp,fromStrand,toComp,toStrand,pathList,fromComponentLinks,toComponentLinks):\n",
     "    fromComponentLinks.setdefault(fromComp,{}).setdefault(fromStrand,{}).\\\n",
     "                       setdefault(toComp,{}).setdefault(toStrand,set()).\\\n",
@@ -1340,7 +1344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def finaliseChunk(rootStruct,zoomLevel,chunk,nucleotides,nBins,chunkNum,curCompCols,prevTotalCols,outputPath,outputName):\n",
     "    endChunkBin = chunk['components'][-1]['last_bin']\n",
     "    endChunkCol = chunk['components'][-1]['lastCol']\n",
@@ -1384,7 +1388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def addLinksToComp(compNum,components,fromComponentLinks,toComponentLinks):\n",
     "    component = deepcopy(components[compNum])\n",
     "    \n",
@@ -1483,7 +1487,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def checkLinks(leftComp,rightComp):\n",
     "    leftRdepCond = np.all([link['upstream']+1==link['downstream'] for link in leftComp['rdepartures']])\n",
     "    leftRarrCond = np.all([link['upstream']-1==link['downstream'] for link in leftComp['rarrivals']])\n",
@@ -1501,7 +1505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def getMatrixPathElement(matrix,pathID):\n",
     "    res = [el for el in matrix if el[0]==pathID]\n",
     "    if len(res)==1:\n",
@@ -1519,7 +1523,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def joinComponents(leftComp,rightComp, maxLengthComponent, inversionThreshold=0.5):\n",
     "    '''\n",
     "    If the joining was successful, the function will return a joined component.\n",
@@ -1600,7 +1604,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def searchIndicesPosRecord(redisConn,zoomLevel,accessions,posMapping):\n",
     "    for pathID,posMappingPath in posMapping.items():\n",
     "        iset_add(redisConn, f'{zoomLevel}.{accessions[pathID]}.Pos',posMappingPath)\n",
@@ -1617,7 +1621,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def exportLayer(zoomLevel,components,componentNucleotides,\n",
     "                fromComponentLinks,toComponentLinks,\n",
     "                rootStruct,\n",
@@ -1764,7 +1768,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def combineIntervals(posPath):\n",
     "    # posPath = pos.get(pathID)\n",
     "    posArray = np.array(posPath)\n",
@@ -1792,7 +1796,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def checkLinksZoom(compNum,fromComponentLinks,toComponentLinks):\n",
     "    # Check only outgoing from the right and incoming to the right\n",
     "    # and check outgoing from the left on and incoming to the left on the next node.\n",
@@ -1836,7 +1840,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def finaliseComponentZoom(component,components,componentLengths,#componentNucleotides,\n",
     "                          nBins,nCols,occupants,\n",
     "                          binBlockLengths,binColStarts,binColEnds,\n",
@@ -1899,7 +1903,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def getOccInvChange(binColLengths,binBlockLength,binOcc,binInv,prevOcc,prevInv,inversionThreshold=0.5):\n",
     "    occChanged = False\n",
     "    invChanged = False\n",
@@ -1916,7 +1920,7 @@
     "        # Averaging invertion\n",
     "        inv[pathID] = sum([bl*bo*bi for bl,bo,bi in zip(binColLengths,binOcc[pathID],binInv[pathID])])/(binBlockLength*occ[pathID])\n",
     "        if (inv[pathID]-inversionThreshold)*(prevInv.get(pathID,inv[pathID])-inversionThreshold)<0 or \\\n",
-    "        (inv[pathID]-inversionThreshold)*(prevInv.get(pathID,inv[pathID])-inversionThreshold)==0 and \\ \n",
+    "        (inv[pathID]-inversionThreshold)*(prevInv.get(pathID,inv[pathID])-inversionThreshold)==0 and \\\n",
     "        inv[pathID]*prevInv.get(pathID,inv[pathID])>inversionThreshold*inversionThreshold:\n",
     "            # The second comdition after or is taking the case where one is equal to inversionThreshold\n",
     "            # and another is more than inversionThreshold.\n",
@@ -1933,7 +1937,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def recordBinZoom(occ,inv,binPosArray,binAnn,nBins,nCols,\n",
     "                  binBlockLength,binBlockLengths,\n",
     "                  binColLengths,\n",
@@ -1970,7 +1974,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def finaliseBinZoom(compNum,\n",
     "                    binOcc,binInv,binPosArray,binAnn,\n",
     "                    nBins,nCols,\n",
@@ -2066,7 +2070,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def checkChange(compNum,components,zoomLevel):\n",
     "    doBreak = False\n",
     "    curComp = components[compNum]\n",
@@ -2106,7 +2110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def checkForBreaksZoom(zoomLevel,compNum,components,fromComponentLinks,toComponentLinks):\n",
     "    if compNum<len(components)-1:\n",
     "        breakByLinks = checkLinksZoom(compNum,fromComponentLinks,toComponentLinks)\n",
@@ -2123,7 +2127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def isStartEnd(compNum,components):\n",
     "    isBreak = False\n",
     "    leftComp = components[compNum]\n",
@@ -2160,7 +2164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def nextLayerZoom(zoomLevel,components,componentLengths,#componentNucleotides,\n",
     "                  fromComponentLinks,toComponentLinks,graph,\n",
     "                  collapsibleBlocks,accStarts,accEnds,\n",
@@ -2515,7 +2519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def splitPositiveNegative(compID,accs,components):\n",
     "    '''\n",
     "    This function simply pulls all accession presented in the component and split them into forward and inversed.\n",
@@ -2565,7 +2569,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def intersectAccLists(accList,dirDict):\n",
     "    overallLinkAccList = set()\n",
     "    for linkAccList in dirDict.values():\n",
@@ -2580,7 +2584,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def updateLinks(newToOldInd,oldToNewInd,\n",
     "                fromComponentLinks,toComponentLinks,\n",
     "                collapsibleBlocks,accStarts,accEnds,components,compAccDir,\n",
@@ -2827,7 +2831,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def calcLengthBlock(startComp,endComp,components):\n",
     "    blockLength = 0\n",
     "    for comp in range(startComp,endComp+1):\n",
@@ -2843,7 +2847,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def processBlock(fromComp,toComp,accID,accEnds,accCompDir,fromComponentLinksAcc,components):\n",
     "    \n",
     "    # Potentially, we need to change this process to use actual paths and take into account the cardinalities/relation of the arrows\n",
@@ -2926,7 +2930,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def updateCollapsibleBlockDict(collapsibleBlocks,listOfUpdates):\n",
     "    for accessionID,blockLength,associatedLinks,associatedBlocks in listOfUpdates:\n",
     "        lengthAccessionComb = collapsibleBlocks.setdefault(blockLength,{}).setdefault(accessionID,(set(),set()))\n",
@@ -2941,7 +2945,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def identifyCollapsibleBlocks(toComponentLinks,fromComponentLinksAcc,components,accStarts,accEnds,accCompDir):\n",
     "    print('Identifying collapsible blocks!')\n",
     "    \n",
@@ -2990,7 +2994,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def compLinksToAccCompLinks(compLinks,doCompDir=False):\n",
     "    accCompLinks = {}\n",
     "    if doCompDir:\n",
@@ -3021,7 +3025,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def compLength(compID,components):\n",
     "    return components[compID-1]['lastCol']-components[compID-1]['firstCol'] + 1"
    ]
@@ -3033,7 +3037,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def removeLink(fromComp,toComp,accessionID,fromComponentLinks,toComponentLinks):\n",
     "    '''\n",
     "    At the moment this function will remove link from `fromComp` to 'toComp' for \n",
@@ -3110,7 +3114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def processCollapsibleBlocks(zoomLevel,collapsibleBlocks,fromComponentLinks,toComponentLinks):\n",
     "#     if zoomLevel==576:\n",
     "#         pdb.set_trace()\n",
@@ -3134,7 +3138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def testStartEnd(compNum,isLeft,components,accStarts,accEnds):\n",
     "    if isLeft:\n",
     "        startInv = 0\n",
@@ -3173,7 +3177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def findEmptyEdges(fromComponentLinks,toComponentLinks,accStarts,accEnds,components):\n",
     "    '''\n",
     "    Identify all empty edges by simply finding components that do not appear either in toComponentLinks (left empty)\n",
@@ -3220,7 +3224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def checkExternalLinks(blockStart,blockEnd,fromComponentLinks,toComponentLinks,components):\n",
     "    '''\n",
     "    \n",
@@ -3272,7 +3276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def createNewBoundaries(blockStart,blockEnd,externalLinksComps):\n",
     "    blockSplit = [[blockStart]]\n",
     "    \n",
@@ -3301,7 +3305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def identifyIsolatedBlocks(leftEmptyList,rightEmptyList,fromComponentLinks,toComponentLinks,components):\n",
     "    if len(leftEmptyList)==0 or len(rightEmptyList)==0:\n",
     "        return []\n",
@@ -3336,7 +3340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def updateLinksRemoveComp(oldToNewInd,fromComponentLinks,toComponentLinks,collapsibleBlocks,accStarts,accEnds):\n",
     "    \n",
     "    newFromComponentLinks={}\n",
@@ -3388,7 +3392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def removeIsolatedBlocks(isolatedBlockList,components,componentLengths,fromComponentLinks,toComponentLinks,accStarts,accEnds,collapsibleBlocks):\n",
     "    if len(isolatedBlockList)==0:\n",
     "        return components,componentLengths,fromComponentLinks,toComponentLinks,accStarts,accEnds,collapsibleBlocks\n",
@@ -3421,7 +3425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def clearInvisible(zoomLevel,collapsibleBlocks,fromComponentLinks,toComponentLinks,accStarts,accEnds,components,componentLengths):\n",
     "    print('Removing links according to collapsible blocks')\n",
     "    numOfCollapsibleBlocks = len(collapsibleBlocks)\n",
@@ -3452,7 +3456,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "def exportToPantograph(graph=None, inputPath=None, GenomeGraphParams={}, \n",
     "                                    outputPath=None, outputName=None, outputSuffix=None, \n",
     "                                    isSeq=True,\n",
@@ -5960,9 +5964,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
