--- a/deBruijnGraphProcessing.ipynb
+++ b/deBruijnGraphProcessing.ipynb
@@ -1,13 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "output-file: debruijngraphprocessing.html\n",
+    "title: Processing GFA produced by CuttleFish compacted de Bruijn graph constructor\n",
+    "\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "mexican-indonesian",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hide\n",
+    "#| include: false\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
@@ -21,14 +33,6 @@
    "source": [
     "%load_ext line_profiler\n",
     "%load_ext memory_profiler"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "active-truth",
-   "metadata": {},
-   "source": [
-    "# Processing GFA produced by CuttleFish compacted de Bruijn graph constructor "
    ]
   },
   {
@@ -1028,7 +1032,7 @@
     }
    ],
    "source": [
-    "nodeLengths = calcNodeLengths(graph)\n"
+    "nodeLengths = calcNodeLengths(graph)"
    ]
   },
   {
@@ -1120,7 +1124,7 @@
     "\n",
     "    for fromNode,fromStrand in negativeStrand:\n",
     "        graph.forwardLinks[fromNode][fromStrand].remove((nodeID+1,'-'))\n",
-    "        graph.forwardLinks[fromNode][fromStrand].append((nodeID+1,'+'))\n"
+    "        graph.forwardLinks[fromNode][fromStrand].append((nodeID+1,'+'))"
    ]
   },
   {
