--- a/02_tree.ipynb
+++ b/02_tree.ipynb
@@ -1,12 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# default_exp tree"
+    "---\n",
+    "description: Provides functionality to construct and work with Tremaux tree out of\n",
+    "  the genome graph for tree sorting.\n",
+    "output-file: tree.html\n",
+    "title: Tree module\n",
+    "\n",
+    "---\n",
+    "\n"
    ]
   },
   {
@@ -15,18 +20,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hide\n",
+    "#| default_exp tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| include: false\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Tree module\n",
-    "\n",
-    "> Provides functionality to construct and work with Tremaux tree out of the genome graph for tree sorting."
    ]
   },
   {
@@ -49,7 +54,7 @@
     }
    ],
    "source": [
-    "#hide\n",
+    "#| include: false\n",
     "from nbdev.showdoc import *\n",
     "from nbdev.export import notebook2script\n",
     "notebook2script()"
@@ -61,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#exporti\n",
+    "#| exporti\n",
     "import numpy as np\n",
     "from copy import deepcopy\n",
     "\n",
@@ -89,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "class AmbigouosTreeEdge(nx.AmbiguousSolution):\n",
     "    \"\"\"Raised if special edge in Tremaux tree cannot be identified as loop or bubble.\n",
     "    \"\"\"\n",
@@ -107,7 +112,7 @@
    },
    "outputs": [],
    "source": [
-    "#export\n",
+    "#| export\n",
     "class TremauxTree(nx.DiGraph):\n",
     "    def __init__(self,graphToTree=None,parentGraph=None,byPath=True,**attr):\n",
     "        if graphToTree is None:\n",
@@ -240,7 +245,7 @@
     "#             if node==4006:\n",
     "#                 pdb.set_trace()\n",
     "            \n",
-    "            print(f'\\nPreprocessing tree {(nodeNum+1)/len(dfsNodeOrder)*100:0.0f}%',end='')\n",
+    "            print(f'\\rPreprocessing tree {(nodeNum+1)/len(dfsNodeOrder)*100:0.0f}%',end='')\n",
     "    \n",
     "            processedNodes.append(node)\n",
     "\n",
@@ -538,8 +543,7 @@
     "#         if len(rootList)>1:\n",
     "#             raise AmbigouosRootNode(f'Only 1 root node is expected, but {len(roorList)} are found')\n",
     "            \n",
-    "#         return rootList[0]\n",
-    "\n"
+    "#         return rootList[0]\n"
    ]
   },
   {
@@ -570,6 +574,25 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
